segundo commit desde casa

--- a/index.html
+++ b/index.html
@@ -13,25 +13,155 @@
 <body>
     <header>
         <h3>ICONO</h3>
-        <h1>Header</h1>
+        <h1>Consolas Playstation</h1>
         <H3>ICONO</H3>
     </header>
 
     <nav>
-        <h4>Inicio</h4>
-        <h4>Inicio</h4>
-        <h4>Inicio</h4>
-        <h4>Inicio</h4>
-        <h4>Inicio</h4>
+        <h4>Playstation 1</h4>
+        <h4>Playstation 2</h4>
+        <h4>Playstation 3</h4>
+        <h4>Playstation 4</h4>
+        <h4>Playstation 5</h4>
     </nav>
 
     <main>
         <section>
-            Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto
+            <div class="playstation1">
+                <h1>Playstation 1</h1>
+                <p>PlayStation (プレイステーション Pureisutēshon, oficialmente abreviada como PS1, PS o PSX) es la primera
+                    consola de
+                    videojuegos desarrollada, comercializada y descontinuada por Sony Computer Entertainment. Fue
+                    lanzado en
+                    Japón el 3 de diciembre de 1994, en América del Norte el 9 de septiembre de 1995, en Europa el 29 de
+                    septiembre de 1995 y en Australia el 15 de noviembre de 1995. Como consola de quinta generación,
+                    PlayStation
+                    compitió principalmente con Nintendo 64 y el Sega Saturn.</p>
+                <br />
+                <p>Sony comenzó a desarrollar la PlayStation después de una empresa fallida con Nintendo para crear un
+                    periférico de CD-ROM para Super Nintendo Entertainment System a principios de la década de 1990. La
+                    consola
+                    fue diseñada principalmente por Ken Kutaragi y Sony Computer Entertainment en Japón, mientras que el
+                    desarrollo adicional se subcontrató en el Reino Unido. Se puso énfasis en los gráficos de polígonos
+                    en
+                    tercera dimensión al frente del diseño de la consola. La producción de juegos de PlayStation fue
+                    diseñada
+                    para ser optimizada e inclusiva, atrayendo el apoyo de muchos desarrolladores externos.</p>
+                <br />
+                <p>La consola resultó popular por su extensa biblioteca de juegos, franquicias populares, bajo precio
+                    minorista
+                    y marketing juvenil agresivo que la anunciaba como la consola preferible para adolescentes y
+                    adultos. Las
+                    franquicias Premier de PlayStation incluyeron Gran Turismo, Crash Bandicoot, Tomb Raider y Final
+                    Fantasy,
+                    todas las cuales generaron numerosas secuelas. Los juegos de PlayStation continuaron vendiéndose
+                    hasta que
+                    Sony cesó la producción de PlayStation y sus juegos el 23 de marzo de 2006, más de once años después
+                    de su
+                    lanzamiento y menos de un año antes del debut de PlayStation 3. Se lanzaron un total de 3 061 juegos
+                    de
+                    PlayStation, con ventas acumuladas de 967 millones de unidades.</p>
+            </div>
+
+            <div class="playstation2">
+                <h1>Playstation 2</h1>
+                <p>La PlayStation 2 (Japonés: プレイステーション2 Pureisutēshon Tsu, oficialmente abreviada como PS2) es la
+                    segunda videoconsola de sobremesa descontinuada producida por Sony Computer Entertainment. Fue la
+                    tercera consola de Sony en ser diseñada por Ken Kutaragi. Además de ser la sucesora de la
+                    PlayStation.</p>
+                <br />
+                <p>Fue lanzada por primera vez el 4 de marzo del año 2000 en Japón, y unos meses después en el resto
+                    del mundo. Es la videoconsola más vendida de la historia, con más de 155 millones de unidades
+                    vendidas. Esta consola es también la que más títulos posee, aproximadamente 3870 títulos,
+                    seguida por su predecesora la PlayStation con unos 2500 títulos. Esta cantidad de títulos se debe a
+                    la extraordinaria acogida por parte del público en general hacia la misma, lo que incluso la
+                    consolidó como la consola con más tiempo en el mercado y a su vez la consola con más duración en el
+                    mismo, hasta que el 3 de enero del año 2013 se decide detener su fabricación tras 13 años de
+                    actividad.A pesar del anuncio, se continuaron produciendo nuevos juegos para la consola hasta
+                    finales de 2013, estos fueron FIFA 14 y Pro Evolution Soccer 2014.</p>
+            </div>
+
+            <div class="playstation3">
+                <h1>Playstation 3</h1>
+                <p>PlayStation 3 (プレイステーション3 Pureisutēshon Surī?, oficialmente abreviada como PS3 es la tercera
+                    videoconsola descontinuada del modelo PlayStation de Sony Computer Entertainment. Fue la quinta y
+                    última consola de Sony en ser diseñada por Ken Kutaragi y formó parte de las videoconsolas de
+                    séptima generación y sus competidores fueron la Xbox 360 de Microsoft y la Wii de Nintendo.</p>
+                <br />
+                <p>Sony confirmó, en marzo de 2017, que dejaría de fabricar la consola en Japón.En la cual
+                    finalmente se dejó de hacer su producción el 29 de mayo de 2017, así mismo finalizando su producción
+                    únicamente en Japón en 2017, en Nueva Zelanda en el 2015, en Estados Unidos en marzo de 2016 y el
+                    resto de Norteamérica en octubre de ese año, pero la producción alrededor del mundo sigue presente,
+                    exceptuando su servicio en línea que igual está presente, a excepción de algunos servidores de
+                    ciertos títulos que ya cesaron su servicio en línea, unos ejemplos de juegos que ya han cesado
+                    servicios en la consola serían PES 2015 y más recientemente Grand Theft Auto Online. El firmware de
+                    la consola era el 4.89 y el último juego lanzado para esta consola fue FIFA 19.</p>
+            </div>
+
+            <div class="playstation4">
+                <h1>Playstation 4</h1>
+                <p>PlayStation 4 (プレイステーション4 Pureisutēshon Fō?, oficialmente abreviada como PS4) es la cuarta
+                    videoconsola del modelo PlayStation. Es la segunda consola de Sony en ser diseñada por Lucmanwar y
+                    forma parte de las videoconsolas de octava generación. Fue anunciada oficialmente el 20 de febrero
+                    de 2013 en el evento PlayStation Meeting 2013, aunque el diseño de la consola no fue presentado
+                    hasta el 10 de junio en el E3 2013. Es la sucesora de la PlayStation 3 y compite con Wii U, y
+                    Switch de Nintendo y Xbox One de Microsoft. Su lanzamiento fue el 15 de noviembre de 2013 en Estados
+                    Unidos y Canadá, el 29 de noviembre se produjo su lanzamiento en Europa y Sudamérica 119 mientras
+                    que en Japón fue el 22 de febrero de 2014.</p>
+                <br />
+                <p>Alejándose de la compleja arquitectura utilizada en el procesador Cell de la videoconsola
+                    PlayStation 3, la PlayStation 4 cuenta con un procesador AMD de 8 núcleos bajo la arquitectura
+                    x86-64. Estas instrucciones x86-64 están diseñados para hacer más fácil el desarrollo de videojuegos
+                    en la consola de nueva generación, que atrae a un mayor número de desarrolladores. Estos cambios
+                    ponen de manifiesto el esfuerzo de Sony para mejorar las lecciones aprendidas durante el desarrollo,
+                    la producción y el lanzamiento de la PS3. Otras características de hardware notables de la PS4 es
+                    que incluyen 8 GB de memoria unificada GDDR5, una unidad de disco Blu-ray más rápido, y los chips
+                    personalizados dedicados a tareas de procesamiento de audio, vídeo y de fondo.</p>
+                <br />
+                <p>Entre las nuevas aplicaciones y servicios, Sony lanzó la aplicación PlayStation App, permitiendo a
+                    los que tengan una PS4 convertir los teléfonos inteligentes y las tabletas en una segunda pantalla
+                    para mejorar la jugabilidad o en teclados externos para más comodidad en el momento de escribir. La
+                    compañía también planeaba debutar con Gaikai, un servicio de juego basado en la nube que aloja
+                    contenidos y juegos descargables. Mediante la incorporación del botón «Share» en el nuevo
+                    controlador hace que sea posible compartir en cualquier momento capturas de pantalla, trofeos,
+                    compras o videos en páginas como Facebook, Twitter y hacer stream de lo que se juegue y ver el de
+                    otros amigos en directo desde Ustream o Twitch, Sony planeó colocar más énfasis en el juego social.
+                    La consola PS4 el primer día de su lanzamiento vendió más de 1 millón de consolas solo en el
+                    territorio de los Estados Unidos. Al inicio de su conferencia de prensa en la Gamescom 2014, Sony
+                    anunció que ya había vendido más de 10 millones de unidades de la PlayStation 4 en el mundo a
+                    usuarios finales. Está diseñada para la amplia integración con PlayStation Vita.</p>
+            </div>
+
+            <div class="playstation5">
+                <h1>Playstation 5</h1>
+                <p>PlayStation 5 (プレイステーション 5 Pureisutēshon Faibu?, abreviada como PS5) es la quinta consola de
+                    videojuegos de sobremesa desarrollada por la empresa Sony Interactive Entertainment. Fue anunciada
+                    en el año 2019 como la sucesora de la PlayStation 4, la PS5 se lanzó el 12 de noviembre de 2020 en
+                    Australia, Japón, Nueva Zelanda, América del Norte, Singapur y Corea del Sur, y en el resto de
+                    países el 19 de noviembre de 2020. La PlayStation 5 junto con la Xbox Series X|S de Microsoft,
+                    lanzada el mismo mes, son parte de la novena generación de consolas de videojuegos.</p>
+                    <br />
+                    <p>La plataforma se lanzó en dos variantes: un modelo base con una unidad de disco óptico compatible
+                    con Ultra HD Blu-ray y una edición digital que carece de esta unidad, que sirve como modelo de menor
+                    costo para quienes prefieren comprar videojuegos mediante descarga digital.</p>
+                    <br />
+                    <p>Las principales características de hardware de la PlayStation 5 incluyen una unidad de estado sólido
+                    personalizada para transmisión de datos de alta velocidad para permitir mejoras significativas en el
+                    rendimiento del almacenamiento, una GPU AMD capaz de mostrar una resolución de 4K de hasta 120
+                    cuadros por segundo, trazado de rayos acelerado por hardware para realismo, iluminación y reflejos y
+                    el motor Tempest que permite efectos de audio 3D acelerados por hardware. Otras características
+                    incluyen el controlador DualSense con retroalimentación háptica y compatibilidad con versiones
+                    anteriores de la mayoría de los videojuegos de PlayStation 4 y PlayStation VR.</p>
+            </div>
         </section>
 
         <aside>
-            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
+            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
+            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
+            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
+            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
+            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
+            Derecha Derecha Derecha Derecha Derecha Derecha
         </aside>
     </main>
 
