tecer commit desde oficina

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
 <body>
     <header>
-        <h3>ICONO</h3>
+        <img src="imgs/playstation-logo.png">
         <h1>Consolas Playstation</h1>
-        <H3>ICONO</H3>
+        <img src="imgs/playstation-logo.png">
     </header>
 
     <nav>
-        <h4>Playstation 1</h4>
-        <h4>Playstation 2</h4>
-        <h4>Playstation 3</h4>
-        <h4>Playstation 4</h4>
-        <h4>Playstation 5</h4>
+        <a href="#1"><h4>Playstation 1</h4></a>
+        <a href="#2"><h4>Playstation 2</h4></a>
+        <a href="#3"><h4>Playstation 3</h4></a>
+        <a href="#4"><h4>Playstation 4</h4></a>
+        <a href="#5"><h4>Playstation 5</h4></a>
     </nav>
 
     <main>
         <section>
-            <div class="playstation1">
+            <div class="playstation1" id="1">
                 <h1>Playstation 1</h1>
                 <p>PlayStation (プレイステーション Pureisutēshon, oficialmente abreviada como PS1, PS o PSX) es la primera
                     consola de
@@ -63,7 +63,7 @@
                     PlayStation, con ventas acumuladas de 967 millones de unidades.</p>
             </div>
 
-            <div class="playstation2">
+            <div class="playstation2" id="2">
                 <h1>Playstation 2</h1>
                 <p>La PlayStation 2 (Japonés: プレイステーション2 Pureisutēshon Tsu, oficialmente abreviada como PS2) es la
                     segunda videoconsola de sobremesa descontinuada producida por Sony Computer Entertainment. Fue la
@@ -81,7 +81,7 @@
                     finales de 2013, estos fueron FIFA 14 y Pro Evolution Soccer 2014.</p>
             </div>
 
-            <div class="playstation3">
+            <div class="playstation3" id="3">
                 <h1>Playstation 3</h1>
                 <p>PlayStation 3 (プレイステーション3 Pureisutēshon Surī?, oficialmente abreviada como PS3 es la tercera
                     videoconsola descontinuada del modelo PlayStation de Sony Computer Entertainment. Fue la quinta y
@@ -98,7 +98,7 @@
                     la consola era el 4.89 y el último juego lanzado para esta consola fue FIFA 19.</p>
             </div>
 
-            <div class="playstation4">
+            <div class="playstation4" id="4">
                 <h1>Playstation 4</h1>
                 <p>PlayStation 4 (プレイステーション4 Pureisutēshon Fō?, oficialmente abreviada como PS4) es la cuarta
                     videoconsola del modelo PlayStation. Es la segunda consola de Sony en ser diseñada por Lucmanwar y
@@ -132,7 +132,7 @@
                     usuarios finales. Está diseñada para la amplia integración con PlayStation Vita.</p>
             </div>
 
-            <div class="playstation5">
+            <div class="playstation5" id="5">
                 <h1>Playstation 5</h1>
                 <p>PlayStation 5 (プレイステーション 5 Pureisutēshon Faibu?, abreviada como PS5) es la quinta consola de
                     videojuegos de sobremesa desarrollada por la empresa Sony Interactive Entertainment. Fue anunciada
@@ -156,17 +156,16 @@
         </section>
 
         <aside>
-            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
-            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
-            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
-            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
-            Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha Derecha
-            Derecha Derecha Derecha Derecha Derecha Derecha
+            <img src="imgs/ps1.png">
+            <img src="imgs/ps2.png">
+            <img src="imgs/ps3.png">
+            <img src="imgs/ps4.png">
+            <img src="imgs/ps5.png">
         </aside>
     </main>
 
     <footer>
-        Footer
+        <h3>Gian Veltri - <a href="https://github.com/jkrlo0">GitHub</a></h3>
     </footer>
 </body>
 
